vlc-java/src/main/java/com/tek/vlc/bridj/LibvlcLibrary.java

    /**
     * Parse the media asynchronously with options.<br>
     * This fetches (local or network) art, meta data and/or tracks information.<br>
     * This method is the extended version of libvlc_media_parse_async().<br>
     * To track when this is over you can listen to libvlc_MediaParsedChanged<br>
     * event. However if this functions returns an error, you will not receive this<br>
     * event.<br>
     * It uses a flag to specify parse options (see libvlc_media_parse_flag_t). All<br>
     * these flags can be combined. By default, media is parsed if it's a local<br>
     * file.<br>
     * \see libvlc_MediaParsedChanged<br>
     * \see libvlc_media_get_meta<br>
     * \see libvlc_media_tracks_get<br>
     * \see libvlc_media_parse_flag_t<br>
     * \param p_md media descriptor object<br>
     * \param parse_flag parse options:<br>
     * \return -1 in case of error, 0 otherwise<br>
     * \version LibVLC 3.0.0 or later<br>
     * Original signature : <code>int libvlc_media_parse_with_options(libvlc_media_t*, libvlc_media_parse_flag_t)</code><br>
     * <i>native declaration : line 1383</i>
     */
    public static native int libvlc_media_parse_with_options(Pointer<LibvlcLibrary.libvlc_media_t > p_md, IntValuedEnum<LibvlcLibrary.libvlc_media_parse_flag_t > parse_flag);
    /**
     * Get Parsed status for media descriptor object.<br>
     * \see libvlc_MediaParsedChanged<br>
     * \param p_md media descriptor object<br>
     * \return true if media object has been parsed otherwise it returns false<br>
     * \libvlc_return_bool<br>
     * Original signature : <code>int libvlc_media_is_parsed(libvlc_media_t*)</code><br>
     * <i>native declaration : line 1397</i>
     */
    public static native int libvlc_media_is_parsed(Pointer<LibvlcLibrary.libvlc_media_t > p_md);
    /**
     * Sets media descriptor's user_data. user_data is specialized data<br>
     * accessed by the host application, VLC.framework uses it as a pointer to<br>
     * an native object that references a libvlc_media_t pointer<br>
     * \param p_md media descriptor object<br>
     * \param p_new_user_data pointer to user data<br>
     * Original signature : <code>void libvlc_media_set_user_data(libvlc_media_t*, void*)</code><br>
     * <i>native declaration : line 1408</i>
     */
    public static native void libvlc_media_set_user_data(Pointer<LibvlcLibrary.libvlc_media_t > p_md, Pointer<? > p_new_user_data);
    /**
     * Get media descriptor's user_data. user_data is specialized data<br>
     * accessed by the host application, VLC.framework uses it as a pointer to<br>
     * an native object that references a libvlc_media_t pointer<br>
     * \param p_md media descriptor object<br>
     * Original signature : <code>void* libvlc_media_get_user_data(libvlc_media_t*)</code><br>
     * <i>native declaration : line 1418</i>
     */
    public static native Pointer<? > libvlc_media_get_user_data(Pointer<LibvlcLibrary.libvlc_media_t > p_md);
    /**
     * Get media descriptor's elementary streams description<br>
     * Note, you need to call libvlc_media_parse() or play the media at least once<br>
     * before calling this function.<br>
     * Not doing this will result in an empty array.<br>
     * \deprecated Use libvlc_media_tracks_get instead<br>
     * \param p_md media descriptor object<br>
     * \param tracks address to store an allocated array of Elementary Streams<br>
     *        descriptions (must be freed by the caller) [OUT]<br>
     * \return the number of Elementary Streams<br>
     * Original signature : <code>int libvlc_media_get_tracks_info(libvlc_media_t*, libvlc_media_track_info_t**)</code><br>
     * <i>native declaration : line 1436</i>
     */
    public static native int libvlc_media_get_tracks_info(Pointer<LibvlcLibrary.libvlc_media_t > p_md, Pointer<Pointer<libvlc_media_track_info_t > > tracks);
    /**
     * Get media descriptor's elementary streams description<br>
     * Note, you need to call libvlc_media_parse() or play the media at least once<br>
     * before calling this function.<br>
     * Not doing this will result in an empty array.<br>
     * \version LibVLC 2.1.0 and later.<br>
     * \param p_md media descriptor object<br>
     * \param tracks address to store an allocated array of Elementary Streams<br>
     *        descriptions (must be freed with libvlc_media_tracks_release<br>
     * by the caller) [OUT]<br>
     * \return the number of Elementary Streams (zero on error)<br>
     * Original signature : <code>int libvlc_media_tracks_get(libvlc_media_t*, libvlc_media_track_t***)</code><br>
     * <i>native declaration : line 1456</i>
     */
    public static native int libvlc_media_tracks_get(Pointer<LibvlcLibrary.libvlc_media_t > p_md, Pointer<Pointer<Pointer<libvlc_media_track_t > > > tracks);
    /**
     * Get codec description from media elementary stream<br>
     * \version LibVLC 3.0.0 and later.<br>
     * \see libvlc_media_track_t<br>
     * \param i_type i_type from libvlc_media_track_t<br>
     * \param i_codec i_codec or i_original_fourcc from libvlc_media_track_t<br>
     * \return codec description<br>
     * Original signature : <code>char* libvlc_media_get_codec_description(libvlc_track_type_t, uint32_t)</code><br>
     * <i>native declaration : line 1472</i>
     */
    public static native Pointer<Byte > libvlc_media_get_codec_description(IntValuedEnum<LibvlcLibrary.libvlc_track_type_t > i_type, int i_codec);
    /**
     * Release media descriptor's elementary streams description array<br>
     * \version LibVLC 2.1.0 and later.<br>
     * \param p_tracks tracks info array to release<br>
     * \param i_count number of elements in the array<br>
     * Original signature : <code>void libvlc_media_tracks_release(libvlc_media_track_t**, unsigned)</code><br>
     * <i>native declaration : line 1484</i>
     */
    public static native void libvlc_media_tracks_release(Pointer<Pointer<libvlc_media_track_t > > p_tracks, int i_count);
    /**
     * Get the media type of the media descriptor object<br>
     * \version LibVLC 3.0.0 and later.<br>
     * \see libvlc_media_type_t<br>
     * \param p_md media descriptor object<br>
     * \return media type<br>
     * Original signature : <code>libvlc_media_type_t libvlc_media_get_type(libvlc_media_t*)</code><br>
     * <i>native declaration : line 1499</i>
     */
    public static native IntValuedEnum<LibvlcLibrary.libvlc_media_type_t > libvlc_media_get_type(Pointer<LibvlcLibrary.libvlc_media_t > p_md);
    /**
     * Create an empty Media Player object<br>
     * \param p_libvlc_instance the libvlc instance in which the Media Player<br>
     *        should be created.<br>
     * \return a new media player object, or NULL on error.<br>
     * Original signature : <code>libvlc_media_player_t* libvlc_media_player_new(libvlc_instance_t*)</code><br>
     * <i>native declaration : line 1660</i>
     */
    public static native Pointer<LibvlcLibrary.libvlc_media_player_t > libvlc_media_player_new(Pointer<LibvlcLibrary.libvlc_instance_t > p_libvlc_instance);
    /**
     * Create a Media Player object from a Media<br>
     * \param p_md the media. Afterwards the p_md can be safely<br>
     *        destroyed.<br>
     * \return a new media player object, or NULL on error.<br>
     * Original signature : <code>libvlc_media_player_t* libvlc_media_player_new_from_media(libvlc_media_t*)</code><br>
     * <i>native declaration : line 1669</i>
     */
    public static native Pointer<LibvlcLibrary.libvlc_media_player_t > libvlc_media_player_new_from_media(Pointer<LibvlcLibrary.libvlc_media_t > p_md);
    /**
     * Release a media_player after use<br>
     * Decrement the reference count of a media player object. If the<br>
     * reference count is 0, then libvlc_media_player_release() will<br>
     * release the media player object. If the media player object<br>
     * has been released, then it should not be used again.<br>
     * \param p_mi the Media Player to free<br>
     * Original signature : <code>void libvlc_media_player_release(libvlc_media_player_t*)</code><br>
     * <i>native declaration : line 1680</i>
     */
    public static native void libvlc_media_player_release(Pointer<LibvlcLibrary.libvlc_media_player_t > p_mi);
    /**
     * Retain a reference to a media player object. Use<br>
     * libvlc_media_player_release() to decrement reference count.<br>
     * \param p_mi media player object<br>
     * Original signature : <code>void libvlc_media_player_retain(libvlc_media_player_t*)</code><br>
     * <i>native declaration : line 1688</i>
     */
    public static native void libvlc_media_player_retain(Pointer<LibvlcLibrary.libvlc_media_player_t > p_mi);
    /**
     * Set the media that will be used by the media_player. If any,<br>
     * previous md will be released.<br>
     * \param p_mi the Media Player<br>
     * \param p_md the Media. Afterwards the p_md can be safely<br>
     *        destroyed.<br>
     * Original signature : <code>void libvlc_media_player_set_media(libvlc_media_player_t*, libvlc_media_t*)</code><br>
     * <i>native declaration : line 1698</i>
     */
    public static native void libvlc_media_player_set_media(Pointer<LibvlcLibrary.libvlc_media_player_t > p_mi, Pointer<LibvlcLibrary.libvlc_media_t > p_md);
    /**
     * Get the media used by the media_player.<br>
     * \param p_mi the Media Player<br>
     * \return the media associated with p_mi, or NULL if no<br>
     *         media is associated<br>
     * Original signature : <code>libvlc_media_t* libvlc_media_player_get_media(libvlc_media_player_t*)</code><br>
     * <i>native declaration : line 1708</i>
     */
    public static native Pointer<LibvlcLibrary.libvlc_media_t > libvlc_media_player_get_media(Pointer<LibvlcLibrary.libvlc_media_player_t > p_mi);
    /**
     * Get the Event Manager from which the media player send event.<br>
     * \param p_mi the Media Player<br>
     * \return the event manager associated with p_mi<br>
     * Original signature : <code>libvlc_event_manager_t* libvlc_media_player_event_manager(libvlc_media_player_t*)</code><br>
     * <i>native declaration : line 1716</i>
     */
    public static native Pointer<LibvlcLibrary.libvlc_event_manager_t > libvlc_media_player_event_manager(Pointer<LibvlcLibrary.libvlc_media_player_t > p_mi);
    /**
     * is_playing<br>
     * \param p_mi the Media Player<br>
     * \return 1 if the media player is playing, 0 otherwise<br>
     * \libvlc_return_bool<br>
     * Original signature : <code>int libvlc_media_player_is_playing(libvlc_media_player_t*)</code><br>
     * <i>native declaration : line 1726</i>
     */
    public static native int libvlc_media_player_is_playing(Pointer<LibvlcLibrary.libvlc_media_player_t > p_mi);
    /**
     * Play<br>
     * \param p_mi the Media Player<br>
     * \return 0 if playback started (and was already started), or -1 on error.<br>
     * Original signature : <code>int libvlc_media_player_play(libvlc_media_player_t*)</code><br>
     * <i>native declaration : line 1734</i>
     */
    public static native int libvlc_media_player_play(Pointer<LibvlcLibrary.libvlc_media_player_t > p_mi);
    /**
     * Pause or resume (no effect if there is no media)<br>
     * \param mp the Media Player<br>
     * \param do_pause play/resume if zero, pause if non-zero<br>
     * \version LibVLC 1.1.1 or later<br>
     * Original signature : <code>void libvlc_media_player_set_pause(libvlc_media_player_t*, int)</code><br>
     * <i>native declaration : line 1743</i>
     */
    public static native void libvlc_media_player_set_pause(Pointer<LibvlcLibrary.libvlc_media_player_t > mp, int do_pause);
